<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_zero_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eilabs.constant.ConstItemActivity"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textLabelElement"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_blue_dark"
        android:clickable="true"
        android:enabled="true"
        android:gravity="center_vertical"
        android:singleLine="true"

        android:text="@string/label_Element"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/textElement"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
android:paddingLeft="@dimen/activity_zero_margin"
        android:textSize="16dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textLabelAtominNr"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_atomic_number"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
         android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/textAtomicNr"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textColor="@android:color/black"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textLabelAtomicWt"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_atomic_weight"
        android:textAlignment="gravity"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/textAtomicWt"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"   />
    <TextView
        android:id="@+id/textLabelPeriod"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_period"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/textPeriod"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textLabelSpecificHeat"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_specific_heat_capacity"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textSpecificHeat"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/textLabelMeltingPoint"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_melting_point"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textMeltingPoint"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textLabelBoilingPoint"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_boiling_Point"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textBoilingPoint"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textLabelOriginofName"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center_vertical"
        android:text="@string/label_Origin_of_Name"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/textOriginOfName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
    android:paddingLeft="@dimen/activity_text_left_margin"
        android:textSize="16dp"/>

</LinearLayout>
